tests/baselines/reference/decoratorOnClassProperty2(strict=true).errors.txt
decoratorOnClassProperty2.ts(4,17): error TS7008: Member 'prop' implicitly has an 'any' type.


==== decoratorOnClassProperty2.ts (1 errors) ====
    declare function dec(target: any, propertyKey: string): void;
    
    class C {
        @dec public prop;
                    ~~~~
!!! error TS7008: Member 'prop' implicitly has an 'any' type.
    }